# noisenow

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/: args.c  args.h  main.c  noise.c  noise.h  rand.c  rand.h
